# eglex

./: .gitignore  CMakeLists.txt  README.md
core/: CMakeLists.txt
core/include/eglex/: configs.h  context.h  display.h  egl.h  eglex.h  error.h  error_enum.h  handle.h  options.h  specification.h  specification_enum.h  specification_io.h  specification_type.h  surface.h  traits.h
core/options/eglex/: options.h.in
core/source/eglex/: details.cpp  error.cpp
examples/eglex/configs/: CMakeLists.txt
examples/eglex/configs/source/: main.cpp
examples/eglex/configurate/: CMakeLists.txt
examples/eglex/configurate/source/: main.cpp
examples/eglex/configurate_custom/: CMakeLists.txt
examples/eglex/configurate_custom/source/: main.cpp
examples/eglex/context/: CMakeLists.txt
examples/eglex/context/source/: main.cpp
examples/eglex/initialize/: CMakeLists.txt
examples/eglex/initialize/source/: main.cpp
examples/eglex/surface/: CMakeLists.txt
examples/eglex/surface/source/: gles2.cpp  main.cpp  native.cpp
